20050901
 - (djm) Update RPM spec file versions

20050831
 - (djm) OpenBSD CVS Sync
   - djm@cvs.openbsd.org 2005/08/30 22:08:05
     [gss-serv.c sshconnect2.c]
     destroy credentials if krb5_kuserok() call fails. Stops credentials being
     delegated to users who are not authorised for GSSAPIAuthentication when
     GSSAPIDeletegateCredentials=yes and another authentication mechanism 
     succeeds; bz#1073 reported by paul.moore AT centrify.com, fix by 
     simon AT sxw.org.uk, tested todd@ biorn@ jakob@; ok deraadt@
   - markus@cvs.openbsd.org 2005/08/31 09:28:42
     [version.h]
     4.2
 - (dtucker) [README] Update release note URL to 4.2
 - (tim) [configure.ac auth.c defines.h session.c openbsd-compat/port-uw.c
   openbsd-compat/port-uw.h openbsd-compat/xcrypt.c] libiaf cleanup. Disable
   libiaf bits for OpenServer6. Free memory allocated by ia_get_logpwd().
   Feedback and OK dtucker@

20050830
 - (tim) [configure.ac] Back out last change. It needs to be done differently.

20050829
 - (tim) [configure.ac] ia_openinfo() seems broken on OSR6. Limit UW long
   password support to 7.x for now.

20050826
 - (tim) [CREDITS LICENCE auth.c configure.ac defines.h includes.h session.c
   openbsd-compat/Makefile.in openbsd-compat/openbsd-compat.h
   openbsd-compat/xcrypt.c] New files [openssh/openbsd-compat/port-uw.c
   openssh/openbsd-compat/port-uw.h] Support long passwords (> 8-char)
   on UnixWare 7 from Dhiraj Gulati and Ahsan Rashid. Cleanup and testing
   by tim@. Feedback and OK dtucker@

20050823
 - (dtucker) [regress/test-exec.sh] Do not prepend an extra "/" to a fully-
   qualified sshd pathname since some systems (eg Cygwin) may consider "/foo"
   and "//foo" to be different.  Spotted by vinschen at redhat.com.
 - (tim) [configure.ac] Not all gcc's support -Wsign-compare. Enhancements
   and OK dtucker@
 - (tim) [defines.h] PATH_MAX bits for OpenServer OK dtucker@

20050821
 - (dtucker) [configure.ac defines.h includes.h sftp.c] Add support for